gibber: add workaround for GLib bug on Windows

https://bugs.freedesktop.org/show_bug.cgi?id=31621
Reviewed-by: Will Thompson <will.thompson@collabora.co.uk>